...
<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22152" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22152"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
            <connections>
                <outlet property="delegate" destination="Voe-Tx-rLC" id="GzC-gU-4Uq"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
...
                    </menu>
                </menuItem>
                <menuItem title="File" id="dMs-cI-mzQ">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="File" id="bib-Uj-vzu">
                        <items>
                            <menuItem title="New Document" keyEquivalent="n" id="yNA-4I-lag">
                                <connections>
                                    <action selector="newDocument:" target="-1" id="eur-Ou-IUP"/>
                                </connections>
                            </menuItem>
                            <menuItem title="New Page" id="eWm-Qz-wsP">
                                <modifierMask key="keyEquivalentModifierMask"/>
...
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="performZoom:" target="-1" id="DIl-cC-cCs"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="e56-wp-fvK"/>
                            <menuItem title="Welcome to Coppice" id="rZa-aQ-RpP">
                                <connections>
                                    <action selector="showWelcomeWindow:" target="Voe-Tx-rLC" id="JvQ-dr-Zha"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="eu3-7i-yIM"/>
                            <menuItem title="Bring All to Front" id="LE2-aR-0XJ">
...
                                    <action selector="arrangeInFront:" target="-1" id="DRN-fu-gQh"/>
                                </connections>
                            </menuItem>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="Help" identifier="h" id="wpr-3q-Mcd">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                        <items>
                            <menuItem title="Coppice Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                <connections>
                                    <action selector="showHelpViewer:" target="Voe-Tx-rLC" id="C2J-x0-q0k"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="fFc-Xd-UPY"/>
                            <menuItem title="What's New in Coppice…" id="U6c-Z4-llO">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="whatsNewInCoppice:" target="Voe-Tx-rLC" id="QDT-uP-K85"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Tour Coppice…" id="zRo-K4-HWS">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="showTour:" target="-1" id="loZ-op-ykN"/>
                                </connections>
                            </menuItem>
                            <menuItem title="View Sample Document…" id="Cx1-JB-c1Q">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="openSampleDocument:" target="-1" id="Ken-uW-dU3"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="gpy-7b-3S8"/>
...
