...
                            <constraint firstAttribute="height" constant="30" id="OVo-zI-LUr"/>
                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="119" id="W9d-vT-6QF"/>
                        </constraints>
                        <buttonCell key="cell" type="square" title="Continue" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" focusRingType="none" imageScaling="proportionallyDown" inset="2" id="58d-tL-bYz" customClass="ColouredButtonCell" customModule="Coppice" customModuleProvider="target">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" metaFont="system"/>
                            <accessibility identifier="TourContinue"/>
                        </buttonCell>
                        <color key="contentTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <connections>
                            <action selector="continueClicked:" target="-2" id="hUU-2n-cVI"/>
                        </connections>
                    </button>
...
                    <constraint firstAttribute="bottom" secondItem="AoG-S8-AGC" secondAttribute="bottom" constant="20" symbolic="YES" id="zki-BZ-Znm"/>
                </constraints>
                <connections>
                    <outlet property="nextKeyView" destination="8Th-lp-2xU" id="pSw-96-3UL"/>
                </connections>
            </view>
            <accessibility identifier="TourWindow"/>
            <connections>
                <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
            </connections>
            <point key="canvasLocation" x="-77" y="164"/>
        </window>
    </objects>
...
