...
    }()

    var homeItem: NSToolbarItem = {
        let item = ButtonToolbarItem(itemIdentifier: .helpHome,
                                     image: NSImage(named: "HelpHome")!,
                                     action: #selector(NavigationStack.home(_:)))
        item.label = NSLocalizedString("Home", comment: "Home help toolbar item label")
        item.paletteLabel = item.label
        item.toolTip = item.label
        if #available(macOS 10.16, *) {
            item.isNavigational = true
        }
        item.autovalidates = true
...
    var toggleSidebarItem: NSToolbarItem = {
        let item = NSToolbarItem(itemIdentifier: .helpToggleSidebar)
        item.image = NSImage.symbol(withName: Symbols.Toolbars.leftSidebar)
        if #available(macOS 10.16, *) {
            item.isNavigational = true
        }
        item.label = NSLocalizedString("Sidebar", comment: "Toggle Sidebar toolbar item label")
        item.paletteLabel = item.label
        item.isBordered = true
        item.action = #selector(RootSplitViewController.toggleSidebar(_:))
        return item
    }()

...
